--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
+# /!\ Because we use {blogdown} /!\
+# Change these options in config/_default/config.toml
+
 # Configuration of Academic
 # Documentation: https://sourcethemes.com/academic/
 #
