Add content to the website and how-to

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,23 +5,23 @@
 
 [[main]]
   name = "Home"
-  url = "#about"
+  url = ""
   weight = 10
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
-
-[[main]]
-  name = "Blog"
-  url = "blog"
+  name = "Documentation"
+  url = "#publications"
   weight = 20
 
 [[main]]
   name = "Packages"
   url = "packages"
   weight = 30
+
+[[main]]
+  name = "News"
+  url = "news"
+  weight = 40
 
 [[main]]
   name = "Contact"
