Update main menu for resources link

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,8 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Documentation"
-  url = "#publications"
+  name = "Resources"
+  url = "#resources"
   weight = 20
 
 [[main]]
