Update academic theme and fix hugo version
- favicon directory change to assets/images
- Links to Github on "hero.md" working
- Clean .markdown files created with hugo as they will be build by
travis
- Fix hugo version in travis
- Update how-to

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
     - $HOME/bin
 
 script:
-  - Rscript -e 'blogdown::install_hugo()'
+  - Rscript -e 'blogdown::install_hugo(version = "0.60.1")'
   - Rscript -e 'blogdown::build_site()'
 
 deploy:
