--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -109,7 +109,8 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/ThinkR_FR"},
+  {icon = "twitter", icon_pack = "fab", name = "Follow us", link = "https://twitter.com/ThinkR_FR"},
+  {icon = "github", icon_pack = "fab", name = "Follow our repo", link = "https://github.com/ThinkR-open"}
   # {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
   # {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
   # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
