--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,8 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Resources"
-  url = "#resources"
+  name = "Documentation"
+  url = "documentation"
   weight = 20
 
 [[main]]
