build_rmd = TRUE

--- a/.github/workflows/blogdown.yaml
+++ b/.github/workflows/blogdown.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build site
         run: |
-          R -e 'blogdown::build_site(TRUE)'
+          R -e 'blogdown::build_site(build_rmd = TRUE)'
 
       - uses: actions/upload-artifact@v1
         with:
