--- a/.github/workflows/blogdown.yaml
+++ b/.github/workflows/blogdown.yaml
@@ -8,7 +8,7 @@ name: blogdown
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install hugo
         run: |
-          R -e 'blogdown::install_hugo(version = "0.60.1")'
+          R -e 'install.packages("remotes");remotes::install_local();blogdown::install_hugo(version = "0.60.1")'
 
       - name: Build site
         run: |
