--- a/.github/workflows/blogdown.yaml
+++ b/.github/workflows/blogdown.yaml
@@ -26,7 +26,7 @@ jobs:
       - uses: r-lib/actions/setup-renv@v2
 
       - name: Install hugo
-        run: blogdown::install_hugo()
+        run: blogdown::install_hugo("0.60.1")
         shell: Rscript {0}
 
       - name: Build site
