--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,11 +5,14 @@ execute:
   freeze: auto
 
 website:
+
   favicon: /img/favicon.ico
   title: "golemverse"
   search: true
   site-url: https://www.golemverse.org
   description: "Welcome to the golemverse!"
+  repo-url: https://github.com/ThinkR-open/golemverse.org
+  repo-actions: [edit, issue]
   navbar:
     left:
       - text: "Resources"
@@ -38,6 +41,11 @@ website:
     center:
       - text: "© ThinkR - A French company of R experts"
         href: https://rtask.thinkr.fr
+    right:
+      - icon: github
+        href: https://github.com/thinkr-open
+      - icon: twitter
+        href: https://twitter.com/thinkr_fr
 
 format:
   html:
